--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask-Failsafe==0.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
 Flask==0.10.1
+SQLAlchemy-Defaults==0.4.3
+SQLAlchemy-Utils==0.27.4
+SQLAlchemy==0.9.8
 psycopg2==2.5.4
-pytest==2.6.4
-flake8
-isort
