--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 alembic==0.7.4
+Flask-Cors==1.9.0
 Flask-Failsafe==0.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
 Flask==0.10.1
+psycopg2==2.5.4
 SQLAlchemy-Defaults==0.4.3
 SQLAlchemy-Utils==0.27.4
 SQLAlchemy==0.9.8
-psycopg2==2.5.4
 validators==0.7
