--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-Cors==1.9.0
 Flask-Failsafe==0.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
+Flask-Mail==0.9.1
 Flask==0.10.1
 SQLAlchemy-Defaults==0.4.3
 SQLAlchemy-Utils==0.27.4
