--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,8 +4,10 @@ coverage==4.3.4
 execnet==1.4.1
 factory-boy==2.8.1
 flake8==3.2.1
+flask-konch==1.1.0
 flexmock==0.10.2
 freezegun==0.3.8
+ipython==5.1.0
 isort==4.2.5
 mccabe==0.6.0
 moto==0.4.31
